# bvd_agent_based_model

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Readme.md  bvd_agent_based_model.cbp  cmake_install.cmake
Automake_build_files/: Makefile.am
BVD_AB_model/: BVD_AB_model.cbp  BVD_AB_model.layout
doc/: Open_questions.org  README.org  README.txt
include/: .directory  BVD_Random_Number_Generator.h  Cow.h  CowWellFarmManager.h  Events.h  Farm.h  FarmManager.h  Herd.h  Initializer.h  Model_Constants.h  SimpleFarmManager.h  SlaughterHouseManager.h  System.h  TableBasedOutput.h
iniFiles/: Scenario1.ini  Scenario10.ini  Scenario11.ini  Scenario12.ini  Scenario13.ini  Scenario2.ini  Scenario3.ini  Scenario4.ini  Scenario5.ini  Scenario6.ini  Scenario7.ini  Scenario8.ini  Scenario9.ini  Test.ini  example.ini
src/: .directory  AdvancedOutput.cpp  BVDContainmentStrategy.cpp  BVD_Random_Number_Generator.cpp  Breeding_module_parameter_gnu.cpp  Cow.cpp  CowWellFarm.cpp  CowWellFarmManager.cpp  Events.cpp  Farm.cpp  FarmManager.cpp  HDF5Handler.cpp  Herd.cpp  Initializer.cpp  Market.cpp  SQLiteHandler.cpp  SimpleFarmManager.cpp  SlaughterHouseManager.cpp  Slaughterhouse.cpp  SmallFarmManager.cpp  System.cpp  TableBasedOutput.cpp  TradeFilter.cpp  Utilities.cpp  programm.cpp
